--- a/index.html
+++ b/index.html
@@ -38,10 +38,10 @@
 	<div class="wrapper">
 		<h2> 바코드 생성 </h2>
 		<p>별표가 포함된 바코드 숫자</p>
-		<input class="form-control" id="barcodeStr" type="text" placeholder="Z2423319**2100802" />
+		<input class="form-control" id="barcodeStr" type="text" />
 		<br />
 		<p>별표대신 들어갈 숫자</p>
-		<input class="form-control" id="barcodeHidden" type="text" placeholder="06" />
+		<input class="form-control" id="barcodeHidden" type="text" />
 
 		<br/><br/>
 		<button type="button" onclick=createNum()>생성하기!</button>
